--- a/recursos/css/estilos.css
+++ b/recursos/css/estilos.css
@@ -87,13 +87,25 @@ a:active {
 	display: none;
 }
 
-.images-2 {
+.images-2, .images-row, .main-image-grid {
 	display: flex;
-	flex-direction: row;
 	background-color: #d5c75f;
 	justify-content: center;
+}
+.images-2, .images-row {
+	flex-direction: row;
+}
+.images-2, .main-image-grid {
 	padding-top: 30px;
+}
+.images-2 {
 	padding-bottom: 30px;
+}
+.main-image-grid {
+	padding-bottom: 10px;
+}
+.main-image-grid {
+	flex-direction: column;	
 }
 .image-child-1 {
 	order: 1;
@@ -105,6 +117,10 @@ a:active {
 	flex-basis: 50%;
 	text-align: center;
 }
+.image-child {
+	flex-basis: 33%;
+	text-align: center;
+}
 .images-2 img {
 	text-align: center;
 	width: 85%;
@@ -112,9 +128,30 @@ a:active {
 	border-width: 1px 2px 2px 1px;
 	border-color: #02010a;
 }
+.image-child img {
+	text-align: center;
+	width: 85%;
+	border-style: solid;
+	border-width: 1px 2px 2px 1px;
+	border-color: #02010a;
+	margin-bottom: 20px;
+}
 
 .images-2 h2 a {
 	color: black;
+}
+
+.image-blur {
+	-webkit-filter: blur(10px);
+	filter: blur(10px);
+}
+.gray-scale {
+	-webkit-filter: grayscale(100%);
+	filter: grayscale(100%);
+}
+.sepia-effect {
+	-webkit-filter: sepia(90%);
+	filter: sepia(90%);	
 }
 
 .footer-main {
@@ -153,6 +190,33 @@ a:active {
 
 
 /** Animations Start **/
+.header-main {
+	animation: salidein 1s;
+}
+@-webkit-keyframes salidein {
+	0% {
+		margin-top: 150px;
+	}
+	60% {
+		margin-top: -5px;
+	}
+	100% {
+		margin-top: 0px;
+	}
+}
+@keyframes salidein {
+	0% {
+		margin-top: 150px;
+	}
+	60% {
+		margin-top: -5px;
+	}
+	100% {
+		margin-top: 0px;
+	}
+}
+
+
 .images-2 .image-child-1 img:hover {
 	animation: imageRotate 1s;
 }
@@ -267,22 +331,11 @@ a:active {
 		padding-left: 0;
 		padding-right: 0;
 	}
-	.images-2 {
+	.images-2, .images-row, .footer-main  {
 		flex-direction: column;
 	}
-	.footer-main {
-		flex-direction: column;
-	}
-	.footer-column-1 {
-		text-align: center;
-	}
-	.footer-column-2 {
-		text-align: center;
-	}
-	.footer-column-3 {
-		text-align: center;
-	}
-	.footer-column-4 {
+	.footer-column-1, .footer-column-2,
+	.footer-column-3, .footer-column-4 {
 		text-align: center;
 	}
 }
